# TARo

./: .gitignore  README.md  requirements.txt  ros2_notes.md  train_yolov8.py
code/: camera_interface.py  main.py  taro.py  yolo_reader.py
my_robot_bringup/: package.xml
my_robot_bringup/config/: gazebo_bridge.yaml
my_robot_bringup/launch/: my_robot_gazebo.launch.xml
my_robot_bringup/worlds/: model_srcs.txt  test_world.sdf
my_robot_bringup/worlds/models/bedtable/: model.sdf
my_robot_bringup/worlds/models/beer/: model.sdf
my_robot_bringup/worlds/models/coke can/: model-1_3.sdf
my_robot_bringup/worlds/models/plastic_cup/: model.sdf
my_robot_description/: CMakeLists.txt  package.xml
my_robot_description/launch/: display.launch.py  display.launch.xml
my_robot_description/rviz/: urdf_config.rviz
my_robot_description/urdf/: arm.xacro  arm_gazebo.xacro  camera.xacro  common_properties.xacro  mobile_base.xacro  mobile_base_gazebo.xacro  my_robot.urdf.xacro
runs/detect/sim_waste7/: results.csv
taro/: package.xml  setup.cfg  setup.py  test_files.py
taro/launch/: taro.launch.py  taro.sim.launch.py
taro/runs/detect/sim_gazebo_waste/: args.yaml  results.csv
taro/runs/detect/sim_waste7/: args.yaml
taro/runs/detect/trash_sorter_custom/: args.yaml
taro/runs/detect/trash_sorter_custom2/: args.yaml  results.csv
taro/taro/: taro.py  taro_node.py  yolo_reader.py
taro/taro/interfaces/: camera_interface.py  robot_state.py  topic_if.py
taro/taro/ros2_if/: camera_interface.py  robot_state.py
taro/taro/util/: print_cams.py
taro_cpp/: CMakeLists.txt  package.xml
taro_cpp/src/: taro_main.cpp
taro_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
taro_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  my_robot.ros2_control.xacro  my_robot.srdf  ros2_controllers.yaml
taro_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
yolobot_recognition/scripts/: yolov8_ros2_pt.py
