<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>taro</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="sg.gutierrez95@gmail.com">azazool</maintainer>
  <license>TODO: License declaration</license>

  <depend>moveit_ros_planning_interface</depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>octomap_msgs</depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_core</depend>


  <depend>control_msgs</depend>
  <depend>interactive_markers</depend>
  <!-- <depend>moveit_core</depend> -->
  <depend>moveit_ros_perception</depend>
  <!-- <depend>moveit_ros_planning_interface</depend> -->
  <depend>moveit_ros_trajectory_cache</depend>
  <depend>moveit_servo</depend>
  <depend>moveit_hybrid_planning</depend>
  <depend>moveit_visual_tools</depend>
  <depend>moveit_msgs</depend>
  <!-- <depend>pcl_conversions</depend> -->
  <!-- <depend>pcl_ros</depend> -->
  <depend>pluginlib</depend>
  <!-- <depend>rosbag</depend> -->
  <depend>rviz_visual_tools</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>moveit_task_constructor_core</depend>
  <depend>warehouse_ros_sqlite</depend>

  <build_depend>eigen</build_depend>
  <build_depend>geometric_shapes</build_depend>
  <build_depend>moveit_common</build_depend>
  <!-- <build_depend>moveit_ros_planning</build_depend> -->

  <!-- <exec_depend>franka_description</exec_depend> -->
  <!-- <exec_depend>moveit_commander</exec_depend> -->
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>gripper_controllers</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>jupyter-notebook</exec_depend>
  <exec_depend>moveit</exec_depend>
  <exec_depend>moveit_resources_panda_moveit_config</exec_depend>
  <exec_depend>moveit_configs_utils</exec_depend>
  <exec_depend>moveit_py</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>kinova_gen3_7dof_robotiq_2f_85_moveit_config</exec_depend>

  <exec_depend>launch_param_builder</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>srdfdom</exec_depend>


  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
