<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>taro</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="sg.gutierrez95@gmail.com">azazool</maintainer>
  <license>TODO: License declaration</license>

  <depend>geometry_msgs</depend>
  <depend>octomap_msgs</depend>
  <depend>control_msgs</depend>
  <depend>interactive_markers</depend>
  <depend>pluginlib</depend>
  <depend>rviz_visual_tools</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>warehouse_ros_sqlite</depend>
  <depend>python3-pip</depend>
  <depend>sensor_msgs</depend>

  <build_depend>eigen</build_depend>
  <build_depend>geometric_shapes</build_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>launch_param_builder</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>srdfdom</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
